# bezier

./: .clangd  .gitignore  CMakeLists.txt
include/: Bezier.hpp  Node.hpp  Rectangle.hpp  SDL_app.hpp  Shape.hpp  Triangle.hpp  circle.hpp  curve.hpp  line.hpp
include/GUI/: Boton.hpp  ImageButton.hpp
include/mtcad/: Node.hpp  Rectangle.hpp  Shape.hpp  Triangle.hpp  circle.cpp  circle.hpp  curve.hpp  line.hpp  materials.hpp  mtcad.hpp
src/: Bezier.cpp  CMakeLists.txt  Node.cpp  Rectangle.cpp  SDL_app.cpp  Triangle.cpp  circle.cpp  curve.cpp  line.cpp  main.cpp
src/GUI/: Boton.cpp  CMakeLists.txt  ImageButton.cpp
src/button/: Boton.cpp
src/mtcad/: CMakeLists.txt  Node.cpp  Rectangle.cpp  Triangle.cpp  circle.cpp  curve.cpp  line.cpp
